# fluidsim

./: CMakeLists.txt  README.md  sfml-app
cmake/: env.cmake
examples/: 2d_example.cu  example.cu  sfml-app
src/: ':w  .app.cpp.swp  .cpu_solver.cpp.swp  .fluidsim.cpp.swp  :w  app.cpp  app.hpp  common.cpp  common.cu  common.cuh  common.hpp  cpu_solver.cpp  cpu_solver.hpp  fluidsim.cpp  fluidsim.hpp  gpu_solver.cu  gpu_solver.cuh  main.cpp  slider.cpp  slider.hpp
